# claude-filing-mem

./: .gitignore  README.md  pyproject.toml  server.py
claude_filing_mem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
